--- a/Xavage/Cube2.html
+++ b/Xavage/Cube2.html
@@ -921,7 +921,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i188.image.html:image/html-->
 <img id="i188" src="https://i.imgur.com/994hACC.png"/>
 <!--#/#--><!--#i4.i190.image.html:image/html-->
-<img id="i190" src="https://i.imgur.com/UD7fmMP.png"/>
+<img id="i190" src="https://i.imgur.com/eQJYieY.png"/>
 <!--#/#--><!--#i4.i192.image.html:image/html-->
 <img id="i192" src="https://i.imgur.com/hGeXVlx.png"/>
 <!--#/#-->
@@ -939,7 +939,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i208.image.html:image/html-->
 <img id="i208" src="https://i.imgur.com/994hACC.png"/>
 <!--#/#--><!--#i5.i216.image.html:image/html-->
-<img id="i216" src="https://i.imgur.com/UD7fmMP.png"/>
+<img id="i216" src="https://i.imgur.com/eQJYieY.png"/>
 <!--#/#--><!--#i5.i224.image.html:image/html-->
 <img id="i224" src="https://i.imgur.com/hGeXVlx.png"/>
 <!--#/#--><!--#i5.i238.image.html:image/html-->
@@ -965,7 +965,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i212.image.html:image/html-->
 <img id="i212" src="https://i.imgur.com/994hACC.png"/>
 <!--#/#--><!--#i6.i220.image.html:image/html-->
-<img id="i220" src="https://i.imgur.com/UD7fmMP.png"/>
+<img id="i220" src="https://i.imgur.com/eQJYieY.png"/>
 <!--#/#--><!--#i6.i228.image.html:image/html-->
 <img id="i228" src="https://i.imgur.com/hGeXVlx.png"/>
 <!--#/#-->
@@ -1021,7 +1021,7 @@ bmShow('i236');
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.xavage.com/es/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.xavage.com/en/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i188.image.js:image/base/js*/
@@ -1034,7 +1034,7 @@ var el = document.getElementById('i188');
 
 el.addEventListener('click', function(e){
     /*#i202.i203.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https:https://www.xavage.com/es/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https:https://www.xavage.com/en/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1051,7 +1051,7 @@ var el = document.getElementById('i190');
 
 el.addEventListener('click', function(e){
     /*#i204.i205.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.xavage.com/es/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que encontré! https://www.xavage.com/en/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1068,7 +1068,7 @@ var el = document.getElementById('i192');
 
 el.addEventListener('click', function(e){
     /*#i206.i207.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.xavage.com/es/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.xavage.com/en/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1095,7 +1095,7 @@ var el = document.getElementById('i208');
 
 el.addEventListener('click', function(e){
     /*#i210.i211.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https:https://www.xavage.com/es/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https:https://www.xavage.com/en/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1112,7 +1112,7 @@ var el = document.getElementById('i216');
 
 el.addEventListener('click', function(e){
     /*#i218.i219.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.xavage.com/es/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que encontré! https://www.xavage.com/en/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1129,7 +1129,7 @@ var el = document.getElementById('i224');
 
 el.addEventListener('click', function(e){
     /*#i226.i227.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.xavage.com/es/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.xavage.com/en/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1163,7 +1163,7 @@ bmShow('i244');
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.xavage.com/es/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.xavage.com/en/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i212.image.js:image/base/js*/
@@ -1176,7 +1176,7 @@ var el = document.getElementById('i212');
 
 el.addEventListener('click', function(e){
     /*#i214.i215.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https:https://www.xavage.com/es/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https:https://www.xavage.com/en/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1193,7 +1193,7 @@ var el = document.getElementById('i220');
 
 el.addEventListener('click', function(e){
     /*#i222.i223.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://www.xavage.com/es/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que encontré! https://www.xavage.com/en/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1210,7 +1210,7 @@ var el = document.getElementById('i228');
 
 el.addEventListener('click', function(e){
     /*#i230.i231.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.xavage.com/es/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.xavage.com/en/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
