--- a/Oster/Cube2.html
+++ b/Oster/Cube2.html
@@ -589,7 +589,7 @@ url('fonts/') format('svg');
     <!--#i8.i9.shape.html:shape/html-->
 <div id="i9"></div>
 <!--#/#--><!--#i8.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/VOsyuhi.png"/>
+<img id="i60" src="https://i.imgur.com/A8xS3BK.png"/>
 <!--#/#--><!--#i8.i88.image.html:image/html-->
 <img id="i88" src="https://i.imgur.com/h23KF8O.png"/>
 <!--#/#--><!--#i8.i76.text.html:text/html-->
@@ -611,7 +611,7 @@ url('fonts/') format('svg');
     <!--#i19.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i19.i62.image.html:image/html-->
-<img id="i62" src="https://i.imgur.com/RWBA0On.png"/>
+<img id="i62" src="https://i.imgur.com/AIv6BOA.png"/>
 <!--#/#--><!--#i19.i78.text.html:text/html-->
 <div id="i78">¿Quieres ganar una cafetera o un horno?</div>
 <!--#/#--><!--#i19.i136.image.html:image/html-->
@@ -633,7 +633,7 @@ url('fonts/') format('svg');
     <!--#i30.i31.shape.html:shape/html-->
 <div id="i31"></div>
 <!--#/#--><!--#i30.i138.image.html:image/html-->
-<img id="i138" src="https://i.imgur.com/NgwGewa.png"/>
+<img id="i138" src="https://i.imgur.com/IRurw7V.png"/>
 <!--#/#--><!--#i30.i140.image.html:image/html-->
 <img id="i140" src="https://i.imgur.com/h23KF8O.png"/>
 <!--#/#--><!--#i30.i142.text.html:text/html-->
@@ -658,7 +658,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i41.i80.text.html:text/html-->
 <div id="i80">¿Cuánto sabes de mamás? Prueba tus conocimientos y gana.</div>
 <!--#/#--><!--#i41.i94.image.html:image/html-->
-<img id="i94" src="https://i.imgur.com/IJHOO4X.png"/>
+<img id="i94" src="https://i.imgur.com/DIPtMUw.png"/>
 <!--#/#--><!--#i41.i146.image.html:image/html-->
 <img id="i146" src="https://i.imgur.com/qUdbF9i.png"/>
 <!--#/#--><!--#i41.i144.image.html:image/html-->
