--- a/Puerto de Indias/Video.html
+++ b/Puerto de Indias/Video.html
@@ -345,13 +345,13 @@
          <div style="height: 1px;text-align:left;margin-top:5px">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:10px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= http://www.victoriassecret.mx"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= https://goo.gl/maps/HshgM3tsakq"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="21" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="21" /></a>
 
                             <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq" target="block">
                             <img alt="compartir en google+" class="googlei" height="21" src="https://i.imgur.com/ObtrzfY.png" title="compartir en google+" width="21" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status= http://www.victoriassecret.mx" target="block">
+                            <a class="shared" href="https://twitter.com/home?status= https://goo.gl/maps/HshgM3tsakq" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="21" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="21" /></a>
                     </span>
                 </div>
