--- a/Puerto de Indias/Video-Geo.html
+++ b/Puerto de Indias/Video-Geo.html
@@ -36,7 +36,7 @@
 
 
         .PapaJohnFijo .te-container {
-            width: 100%;
+            width: 300px;
             height: 600px;
             margin: 0 auto;
             background-color: #ffffff;
@@ -45,7 +45,7 @@
 
         .PapaJohnFijo .te-wrapper {
             position: relative;
-            width: 100%;
+            width: 300px;
             height: 600px;
             overflow: hidden;
             font-family: Anglecia-Pro-Title-W01-Bold_1;
@@ -164,7 +164,7 @@
             position:relative;
             z-index: 5; 
 
-            padding-top: 200px;
+            padding-top: 160px;
 
         }
 
@@ -197,7 +197,7 @@
             border-radius: 1px;
             position: absolute;
             text-align: center;
-            margin-top: 50px;
+            margin-top: 25px;
             margin-left: -8px
         }
 
