--- a/Puerto de Indias/FadeBig2.html
+++ b/Puerto de Indias/FadeBig2.html
@@ -399,7 +399,7 @@
         </div>
         <div class="tgx_text"> 
             <span class="tgx_text_title tgx_text_bold">
-             It´s not pink.  <span style="color: #eb9baf;">It's Puerto</span>
+             It´s not pink.  <span style="color: #eb9baf;">It's Puerto.</span>
             </span>
             <br/> 
             <span class="tgx_text_small tgx_text_bold">
