--- a/H&M Marzo/Cube.html
+++ b/H&M Marzo/Cube.html
@@ -506,7 +506,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 58px;
         -ms-transform: translate(-50%, -50%) translate(-2px, 79px) rotate(0deg);
@@ -769,7 +769,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 278px; height: 57px;
         -ms-transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
@@ -944,12 +944,12 @@ var el = document.getElementById('i224');
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i91.i248.actions.js:actions/base/js.1*/
+/*#/#*//*#i91.i260.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
-    /*#i248.i249.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i260.i261.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -961,13 +961,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i236.i237.positioning.js:positioning/base/js.2*/
 bmShow('i236');
-/*#/#*//*#i236.i250.actions.js:actions/base/js.1*/
+/*#/#*//*#i236.i266.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i236');
 
 el.addEventListener('click', function(e){
-    /*#i250.i251.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i266.i267.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=  https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -978,13 +978,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i238.i239.positioning.js:positioning/base/js.2*/
 bmShow('i238');
-/*#/#*//*#i238.i252.actions.js:actions/base/js.1*/
+/*#/#*//*#i238.i270.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i238');
 
 el.addEventListener('click', function(e){
-    /*#i252.i253.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i270.i271.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -995,13 +995,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i240.i241.positioning.js:positioning/base/js.2*/
 bmShow('i240');
-/*#/#*//*#i240.i254.actions.js:actions/base/js.1*/
+/*#/#*//*#i240.i268.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i240');
 
 el.addEventListener('click', function(e){
-    /*#i254.i255.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i268.i269.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://twitter.com/home?status=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1032,12 +1032,12 @@ var el = document.getElementById('i228');
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i95.i256.actions.js:actions/base/js.1*/
+/*#/#*//*#i95.i262.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
-    /*#i256.i257.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i262.i263.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -1065,12 +1065,12 @@ var el = document.getElementById('i232');
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i99.i258.actions.js:actions/base/js.1*/
+/*#/#*//*#i99.i264.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
-    /*#i258.i259.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i264.i265.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -1082,13 +1082,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i242.i243.positioning.js:positioning/base/js.2*/
 bmShow('i242');
-/*#/#*//*#i242.i260.actions.js:actions/base/js.1*/
+/*#/#*//*#i242.i272.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i242');
 
 el.addEventListener('click', function(e){
-    /*#i260.i261.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i272.i273.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=  https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1099,13 +1099,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i244.i245.positioning.js:positioning/base/js.2*/
 bmShow('i244');
-/*#/#*//*#i244.i262.actions.js:actions/base/js.1*/
+/*#/#*//*#i244.i274.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i244');
 
 el.addEventListener('click', function(e){
-    /*#i262.i263.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i274.i275.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1116,13 +1116,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i246.i247.positioning.js:positioning/base/js.2*/
 bmShow('i246');
-/*#/#*//*#i246.i264.actions.js:actions/base/js.1*/
+/*#/#*//*#i246.i276.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i246');
 
 el.addEventListener('click', function(e){
-    /*#i264.i265.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i276.i277.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://twitter.com/home?status=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
