--- a/H&M Marzo/Venetian.html
+++ b/H&M Marzo/Venetian.html
@@ -2228,7 +2228,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
 #i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 303px; height: 52px;
         -ms-transform: translate(0, 0) translate(9px, 316px) rotate(0deg);
@@ -2375,12 +2375,12 @@ bmShow('i46');
 bmShow('i63');
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
-/*#/#*//*#i68.i77.actions.js:actions/base/js.1*/
+/*#/#*//*#i68.i93.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
-    /*#i77.i78.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i93.i94.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -2390,12 +2390,12 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i73.i74.positioning.js:positioning/base/js.2*/
 bmShow('i73');
-/*#/#*//*#i73.i79.actions.js:actions/base/js.1*/
+/*#/#*//*#i73.i95.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i73');
 
 el.addEventListener('click', function(e){
-    /*#i79.i80.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i95.i96.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -2413,7 +2413,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2430,7 +2430,7 @@ var el = document.getElementById('i83');
 
 el.addEventListener('click', function(e){
     /*#i89.i90.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2447,7 +2447,7 @@ var el = document.getElementById('i85');
 
 el.addEventListener('click', function(e){
     /*#i91.i92.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
