--- a/BMW/fade-small.html
+++ b/BMW/fade-small.html
@@ -70,11 +70,11 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/SCSoWVC.jpg)
+            background-image: url(https://i.imgur.com/TWFtHOu.jpg)
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/RgqvbuH.jpg)
+            background-image: url(https://i.imgur.com/rZrgYqg.jpg)
         }
 
         .fadesmall .bg.cover-3 {
@@ -272,7 +272,7 @@
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
         <div class="cta"><img style="height: 45px;" id="cta" src="https://i.imgur.com/LhdUffz.png"></div>
 
-        <a href="https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank">
+        <a href="https://www.bmw-motorrad.com.mx/es/service/spezial1/hing-yeung.html" target="_blank">
             <div class="carousel-container">
                 <!-- ESTAS SE COLOCAN EN EL CSS -->
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
@@ -289,13 +289,13 @@
 
                 <div id="botones-para-compartir"> 
                    
-                    <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> 
+                    <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.bmw-motorrad.com.mx/es/service/spezial1/hing-yeung.html" target="_blank"> 
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/210k9Dl.png" title="compartir en facebook" width="22" /></a>
 
-                        <a class="shared" href="https://plus.google.com/share?url=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> 
+                        <a class="shared" href="https://plus.google.com/share?url=https://www.bmw-motorrad.com.mx/es/service/spezial1/hing-yeung.html" target="_blank"> 
                             <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/zp1Ua8P.png" title="compartir en google+" width="22" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/gDjjL45.png" title="compartir en twitter" width="22" /></a> </span></div>
+                            <a class="shared" href="https://twitter.com/home?status=https://www.bmw-motorrad.com.mx/es/service/spezial1/hing-yeung.html" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/gDjjL45.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
